--- a/tpls/role/roleAuthor.html
+++ b/tpls/role/roleAuthor.html
@@ -7,9 +7,12 @@
 <body>
 <div class="row" ng-app="rAuthapp">
     <div class="col-sm-12 "  style="height: 100%" ng-controller="rAuthCtrl">
-        <div>
+        <div style="margin-left:30px;margin-bottom: 10px">
             <button ng-click="authSubmit()" class="btn btn-success">授权</button>
             <button ng-click="authBack()" class="btn btn-gray">取消</button>
+        </div>
+        <div class="col-lg-5 col-sm-7">
+            <div id="resourceTree"></div>
         </div>
         <div id="grid-search"></div>
         <table id="grid-table"></table>
@@ -17,217 +20,217 @@
     </div>
 </div>
     <script>
-        jQuery(function ($) {
-            var resource_query_url='resource/query.form';
-            var grid_selector = "#grid-table";
-            var pager_selector = "#grid-pager";
-            var grid_searcher ="#grid-search";
-            var nameFormat= '<label>'+
-                '<input type="checkbox" class="ace" id="chxCheckAll">'+
-                '<span class="lbl align-top" >资源名称</span>'+
-                '</label>';
-            var colNames=['资源id',nameFormat];
-            var colModel=[
-                {name:'id',index:'id',key:true,hidden:true,editable:false},
-                {name:'sName',index:'sName',width:70,sortable:false,formatter:showName}
-            ];
-            var prmNames={
-                page:"currentPage",    // 表示请求页码的参数名称
-                rows:"pageSize",    // 表示请求行数的参数名称
-                sort: "sidx", // 表示用于排序的列名的参数名称
-                order: "sord", // 表示采用的排序方式的参数名称
-                search:"search", // 表示是否是搜索请求的参数名称
-                nd:"nd", // 表示已经发送请求的次数的参数名称
-                id:"id", // 表示当在编辑数据模块中发送数据时，使用的id的名称
-                oper:"oper",    // operation参数名称（我暂时还没用到）
-                editoper:"edit", // 当在edit模式中提交数据时，操作的名称
-                addoper:"add", // 当在add模式中提交数据时，操作的名称
-                deloper:"del", // 当在delete模式中提交数据时，操作的名称
-                subgridid:"subid", // 当点击以载入数据到子表时，传递的数据名称
-                npage: null,
-                totalrows:"totalCounts" // 表示需从Server得到总共多少行数据的参数名称，参见jqGrid选项中的rowTotal
-            };
-            var jsonReaderConfig={
-                root: "content",   // json中代表实际模型数据的入口
-                page: "currentPage",   // json中代表当前页码的数据
-                total: "totalPage", // json中代表页码总数的数据
-                records: "totalCounts", // json中代表数据行总数的数据
-                cell: "cell",
-                id: "id",
-                userdata: "userdata",
-                repeatitems: false
-            };
-            jQuery(grid_selector).jqGrid({
-                url: BASE_URL+resource_query_url,
-                mtype:"POST",
-                datatype: "json",
-                height: 500,
-                treeGrid:true,//w为ture则为树形表格
-                treeGridModel:"adjacency",
-                ExpandColumn:"sName",//展开的列
-//                ExpandColClick:true,//树形表格是否展开
-                treeReader : {
-                    level_field: "level",
-                    parent_id_field: "sParentId",
-                    leaf_field: "leaf",
-                    expanded_field: "expanded"
-                },
-                treeIcons:{plus:'glyphicon glyphicon-chevron-right',minus:'glyphicon glyphicon-chevron-down',leaf:'glyphicon glyphicon-arrow-right'},
-                colNames: colNames,
-                colModel: colModel,
-                page:false,
-                viewrecords: true,
-                rowNum: -1,
-                pager: pager_selector,
-                caption: "角色授权",
-                autowidth: true,
-                prmNames: prmNames,
-                jsonReader: jsonReaderConfig,
-                loadComplete : function() {
-                    var table = this;
-                    setTimeout(function(){
-                        styleCheckbox(table);
-                        updateActionIcons(table);
-                        updatePagerIcons(table);
-                        enableTooltips(table);
-                    }, 0);
-                }
-            });
-            jQuery(grid_selector).jqGrid('navGrid',pager_selector,{
-                edit: false,
-                editicon : 'icon-pencil gray',
-                add: false,
-                addicon : 'icon-plus-sign purple',
-                del: false,
-                delicon : 'icon-trash red',
-                search: false,
-                searchicon : 'icon-search orange',
-                refresh: false,
-                refreshicon : 'icon-refresh green',
-                view: false,
-                viewicon : 'icon-zoom-in grey'
-            },{},{},{recreateForm: true,
-                beforeShowForm : function(e) {
-                    var form = $(e[0]);
-                    if(form.data('styled')) return false;
-
-                    form.closest('.ui-jqdialog').find('.ui-jqdialog-titlebar').wrapInner('<div class="widget-header" />')
-                    style_delete_form(form);
-
-                    form.data('styled', true);
-                },
-                onClick : function(e) {
-                    alert(1);
-                }});
-            //全选/全不选
-            $("#chxCheckAll").on('click', function(){
-                $("input[id^='chx']").each(function(){
-                    $(this).prop("checked", $("#chxCheckAll").is(':checked'));
-                });
-            });
-
-            function showName( cellvalue, options, cell ) {
-                var rowId = cell.id;
-                var checkbox = '<label >'+
-                    '<input type="checkbox" id="chx'+rowId+'" class="ace" value="'+rowId+'" onclick="clickCheckbox('+rowId+', this);" />'+
-                    '<span class="lbl align-top" ></span>'+
-                    cell.sName +
-                    '</label>';
-                return  checkbox ;
-            }
-//checkbox事件
-            clickCheckbox = function clickCheckbox(rowid, $this) {
-                checkChildren(rowid,$this);
-                if($($this).is(':checked')){
-                    checkParent(rowid, $this);
-                }else{
-                    $("#chxCheckAll").prop("checked",false);
-                }
-            };
-//递归选中子节点
-            function checkChildren(rowid,$this){
-                console.log(jQuery(grid_selector).jqGrid('getNodeChildren',$(grid_selector).jqGrid("getRowData", rowid)));
-                var records = jQuery(grid_selector).jqGrid('getNodeChildren',$(grid_selector).jqGrid("getRowData", rowid));
-                if(records.length>0){
-                    for (var i=0;i<records.length;i++){
-                        var cb = $("#chx"+records[i].id);
-                        cb.prop("checked", $($this).is(':checked'));
-                        checkChildren(records[i].id,cb);
-                    }
-                }
-            }
-//递归选中父节点
-            function checkParent(rowid, $this){
-                var parent = $(grid_selector).jqGrid('getNodeParent',$(grid_selector).jqGrid("getRowData", rowid));
-                if(parent){
-                    var cb = $("#chx"+parent.id);
-                    cb.prop("checked", $($this).is(':checked'));
-                    checkParent(parent.id,cb);
-                }
-            }
-
-
-            function style_delete_form(form) {
-                var buttons = form.next().find('.EditButton .fm-button');
-                buttons.addClass('btn btn-sm').find('[class*="-icon"]').remove();//ui-icon, s-icon
-                buttons.eq(0).addClass('btn-danger').prepend('<i class="icon-trash"></i>');
-                buttons.eq(1).prepend('<i class="icon-remove"></i>')
-            }
-
-            function styleCheckbox(table) {
-                /**
-                 $(table).find('input:checkbox').addClass('ace')
-                 .wrap('<label />')
-                 .after('<span class="lbl align-top" />')
-
-
-                 $('.ui-jqgrid-labels th[id*="_cb"]:first-child')
-                 .find('input.cbox[type=checkbox]').addClass('ace')
-                 .wrap('<label />').after('<span class="lbl align-top" />');
-                 */
-            }
-
-            function updateActionIcons(table) {
-                /**
-                 var replacement =
-                 {
-                     'ui-icon-pencil' : 'icon-pencil blue',
-                     'ui-icon-trash' : 'icon-trash red',
-                     'ui-icon-disk' : 'icon-ok green',
-                     'ui-icon-cancel' : 'icon-remove red'
-                 };
-                 $(table).find('.ui-pg-div span.ui-icon').each(function(){
-						var icon = $(this);
-						var $class = $.trim(icon.attr('class').replace('ui-icon', ''));
-						if($class in replacement) icon.attr('class', 'ui-icon '+replacement[$class]);
-					})
-                 */
-            }
-
-            function updatePagerIcons(table) {
-                var replacement =
-                    {
-                        'ui-icon-seek-first' : 'icon-double-angle-left bigger-140',
-                        'ui-icon-seek-prev' : 'icon-angle-left bigger-140',
-                        'ui-icon-seek-next' : 'icon-angle-right bigger-140',
-                        'ui-icon-seek-end' : 'icon-double-angle-right bigger-140'
-                    };
-                $('.ui-pg-table:not(.navtable) > tbody > tr > .ui-pg-button > .ui-icon').each(function(){
-                    var icon = $(this);
-                    var $class = $.trim(icon.attr('class').replace('ui-icon', ''));
-
-                    if($class in replacement) icon.attr('class', 'ui-icon '+replacement[$class]);
-                })
-            }
-
-            function enableTooltips(table) {
-                $('.navtable .ui-pg-button').tooltip({container:'body'});
-                $(table).find('.ui-pg-div').tooltip({container:'body'});
-            }
-
-
-
-        });
+//        jQuery(function ($) {
+//            var resource_query_url='resource/query.form';
+//            var grid_selector = "#grid-table";
+//            var pager_selector = "#grid-pager";
+//            var grid_searcher ="#grid-search";
+//            var nameFormat= '<label>'+
+//                '<input type="checkbox" class="ace" id="chxCheckAll">'+
+//                '<span class="lbl align-top" >资源名称</span>'+
+//                '</label>';
+//            var colNames=['资源id',nameFormat];
+//            var colModel=[
+//                {name:'id',index:'id',key:true,hidden:true,editable:false},
+//                {name:'sName',index:'sName',width:70,sortable:false,formatter:showName}
+//            ];
+//            var prmNames={
+//                page:"currentPage",    // 表示请求页码的参数名称
+//                rows:"pageSize",    // 表示请求行数的参数名称
+//                sort: "sidx", // 表示用于排序的列名的参数名称
+//                order: "sord", // 表示采用的排序方式的参数名称
+//                search:"search", // 表示是否是搜索请求的参数名称
+//                nd:"nd", // 表示已经发送请求的次数的参数名称
+//                id:"id", // 表示当在编辑数据模块中发送数据时，使用的id的名称
+//                oper:"oper",    // operation参数名称（我暂时还没用到）
+//                editoper:"edit", // 当在edit模式中提交数据时，操作的名称
+//                addoper:"add", // 当在add模式中提交数据时，操作的名称
+//                deloper:"del", // 当在delete模式中提交数据时，操作的名称
+//                subgridid:"subid", // 当点击以载入数据到子表时，传递的数据名称
+//                npage: null,
+//                totalrows:"totalCounts" // 表示需从Server得到总共多少行数据的参数名称，参见jqGrid选项中的rowTotal
+//            };
+//            var jsonReaderConfig={
+//                root: "content",   // json中代表实际模型数据的入口
+//                page: "currentPage",   // json中代表当前页码的数据
+//                total: "totalPage", // json中代表页码总数的数据
+//                records: "totalCounts", // json中代表数据行总数的数据
+//                cell: "cell",
+//                id: "id",
+//                userdata: "userdata",
+//                repeatitems: false
+//            };
+//            jQuery(grid_selector).jqGrid({
+//                url: BASE_URL+resource_query_url,
+//                mtype:"POST",
+//                datatype: "json",
+//                height: 500,
+//                treeGrid:true,//w为ture则为树形表格
+//                treeGridModel:"adjacency",
+//                ExpandColumn:"sName",//展开的列
+////                ExpandColClick:true,//树形表格是否展开
+//                treeReader : {
+//                    level_field: "level",
+//                    parent_id_field: "sParentId",
+//                    leaf_field: "leaf",
+//                    expanded_field: "expanded"
+//                },
+//                treeIcons:{plus:'glyphicon glyphicon-chevron-right',minus:'glyphicon glyphicon-chevron-down',leaf:'glyphicon glyphicon-arrow-right'},
+//                colNames: colNames,
+//                colModel: colModel,
+//                page:false,
+//                viewrecords: true,
+//                rowNum: -1,
+//                pager: pager_selector,
+//                caption: "角色授权",
+//                autowidth: true,
+//                prmNames: prmNames,
+//                jsonReader: jsonReaderConfig,
+//                loadComplete : function() {
+//                    var table = this;
+//                    setTimeout(function(){
+//                        styleCheckbox(table);
+//                        updateActionIcons(table);
+//                        updatePagerIcons(table);
+//                        enableTooltips(table);
+//                    }, 0);
+//                }
+//            });
+//            jQuery(grid_selector).jqGrid('navGrid',pager_selector,{
+//                edit: false,
+//                editicon : 'icon-pencil gray',
+//                add: false,
+//                addicon : 'icon-plus-sign purple',
+//                del: false,
+//                delicon : 'icon-trash red',
+//                search: false,
+//                searchicon : 'icon-search orange',
+//                refresh: false,
+//                refreshicon : 'icon-refresh green',
+//                view: false,
+//                viewicon : 'icon-zoom-in grey'
+//            },{},{},{recreateForm: true,
+//                beforeShowForm : function(e) {
+//                    var form = $(e[0]);
+//                    if(form.data('styled')) return false;
+//
+//                    form.closest('.ui-jqdialog').find('.ui-jqdialog-titlebar').wrapInner('<div class="widget-header" />')
+//                    style_delete_form(form);
+//
+//                    form.data('styled', true);
+//                },
+//                onClick : function(e) {
+//                    alert(1);
+//                }});
+//            //全选/全不选
+//            $("#chxCheckAll").on('click', function(){
+//                $("input[id^='chx']").each(function(){
+//                    $(this).prop("checked", $("#chxCheckAll").is(':checked'));
+//                });
+//            });
+//
+//            function showName( cellvalue, options, cell ) {
+//                var rowId = cell.id;
+//                var checkbox = '<label >'+
+//                    '<input type="checkbox" id="chx'+rowId+'" class="ace" value="'+rowId+'" onclick="clickCheckbox('+rowId+', this);" />'+
+//                    '<span class="lbl align-top" ></span>'+
+//                    cell.sName +
+//                    '</label>';
+//                return  checkbox ;
+//            }
+////checkbox事件
+//            clickCheckbox = function clickCheckbox(rowid, $this) {
+//                checkChildren(rowid,$this);
+//                if($($this).is(':checked')){
+//                    checkParent(rowid, $this);
+//                }else{
+//                    $("#chxCheckAll").prop("checked",false);
+//                }
+//            };
+////递归选中子节点
+//            function checkChildren(rowid,$this){
+//                console.log(jQuery(grid_selector).jqGrid('getNodeChildren',$(grid_selector).jqGrid("getRowData", rowid)));
+//                var records = jQuery(grid_selector).jqGrid('getNodeChildren',$(grid_selector).jqGrid("getRowData", rowid));
+//                if(records.length>0){
+//                    for (var i=0;i<records.length;i++){
+//                        var cb = $("#chx"+records[i].id);
+//                        cb.prop("checked", $($this).is(':checked'));
+//                        checkChildren(records[i].id,cb);
+//                    }
+//                }
+//            }
+////递归选中父节点
+//            function checkParent(rowid, $this){
+//                var parent = $(grid_selector).jqGrid('getNodeParent',$(grid_selector).jqGrid("getRowData", rowid));
+//                if(parent){
+//                    var cb = $("#chx"+parent.id);
+//                    cb.prop("checked", $($this).is(':checked'));
+//                    checkParent(parent.id,cb);
+//                }
+//            }
+//
+//
+//            function style_delete_form(form) {
+//                var buttons = form.next().find('.EditButton .fm-button');
+//                buttons.addClass('btn btn-sm').find('[class*="-icon"]').remove();//ui-icon, s-icon
+//                buttons.eq(0).addClass('btn-danger').prepend('<i class="icon-trash"></i>');
+//                buttons.eq(1).prepend('<i class="icon-remove"></i>')
+//            }
+//
+//            function styleCheckbox(table) {
+//                /**
+//                 $(table).find('input:checkbox').addClass('ace')
+//                 .wrap('<label />')
+//                 .after('<span class="lbl align-top" />')
+//
+//
+//                 $('.ui-jqgrid-labels th[id*="_cb"]:first-child')
+//                 .find('input.cbox[type=checkbox]').addClass('ace')
+//                 .wrap('<label />').after('<span class="lbl align-top" />');
+//                 */
+//            }
+//
+//            function updateActionIcons(table) {
+//                /**
+//                 var replacement =
+//                 {
+//                     'ui-icon-pencil' : 'icon-pencil blue',
+//                     'ui-icon-trash' : 'icon-trash red',
+//                     'ui-icon-disk' : 'icon-ok green',
+//                     'ui-icon-cancel' : 'icon-remove red'
+//                 };
+//                 $(table).find('.ui-pg-div span.ui-icon').each(function(){
+//						var icon = $(this);
+//						var $class = $.trim(icon.attr('class').replace('ui-icon', ''));
+//						if($class in replacement) icon.attr('class', 'ui-icon '+replacement[$class]);
+//					})
+//                 */
+//            }
+//
+//            function updatePagerIcons(table) {
+//                var replacement =
+//                    {
+//                        'ui-icon-seek-first' : 'icon-double-angle-left bigger-140',
+//                        'ui-icon-seek-prev' : 'icon-angle-left bigger-140',
+//                        'ui-icon-seek-next' : 'icon-angle-right bigger-140',
+//                        'ui-icon-seek-end' : 'icon-double-angle-right bigger-140'
+//                    };
+//                $('.ui-pg-table:not(.navtable) > tbody > tr > .ui-pg-button > .ui-icon').each(function(){
+//                    var icon = $(this);
+//                    var $class = $.trim(icon.attr('class').replace('ui-icon', ''));
+//
+//                    if($class in replacement) icon.attr('class', 'ui-icon '+replacement[$class]);
+//                })
+//            }
+//
+//            function enableTooltips(table) {
+//                $('.navtable .ui-pg-button').tooltip({container:'body'});
+//                $(table).find('.ui-pg-div').tooltip({container:'body'});
+//            }
+//
+//
+//
+//        });
     </script>
 </body>
 </html>
