--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -7,20 +7,20 @@
 
     <style type="text/css">
         .basic-grey {
-            margin-left:auto;
-            margin-right:auto;
+            margin-left: auto;
+            margin-right: auto;
 
             background: #F7F7F7;
             padding: 25px 15px 25px 10px;
             font: 12px Georgia, "Times New Roman", Times, serif;
             color: #888;
             text-shadow: 1px 1px 1px #FFF;
-            border:1px solid #E4E4E4;
+            border: 1px solid #E4E4E4;
         }
 
         .text {
-            margin-left:auto;
-            margin-right:auto;
+            margin-left: auto;
+            margin-right: auto;
 
             background: #F7F7F7;
             padding: 40px 15px 25px 10px;
@@ -34,19 +34,22 @@
             font-size: 25px;
             padding: 0px 0px 10px 40px;
             display: block;
-            border-bottom:1px solid #E4E4E4;
+            border-bottom: 1px solid #E4E4E4;
             margin: -10px -15px 30px -10px;;
             color: #888;
         }
-        .basic-grey h1>span {
+
+        .basic-grey h1 > span {
             display: block;
             font-size: 11px;
         }
+
         .basic-grey label {
             display: block;
             margin: 0px;
         }
-        .basic-grey label>span {
+
+        .basic-grey label > span {
             float: left;
             width: 10%;
             text-align: right;
@@ -54,6 +57,7 @@
             margin-top: 10px;
             color: #888;
         }
+
         .basic-grey input[type="text"], .basic-grey input[type="createUserId"], .basic-grey textarea, .basic-grey select {
             border: 1px solid #DADADA;
             color: #888;
@@ -65,19 +69,21 @@
             padding: 3px 3px 3px 5px;
             width: 50%;
             font-size: 12px;
-            line-height:15px;
+            line-height: 15px;
             box-shadow: inset 0px 1px 4px #ECECEC;
             -moz-box-shadow: inset 0px 1px 4px #ECECEC;
             -webkit-box-shadow: inset 0px 1px 4px #ECECEC;
         }
-        .basic-grey textarea{
+
+        .basic-grey textarea {
             padding: 5px 3px 3px 5px;
         }
+
         .basic-grey select {
-            background: #FFF  no-repeat right;
-            background: #FFF  no-repeat right;
-            appearance:none;
-            -webkit-appearance:none;
+            background: #FFF no-repeat right;
+            background: #FFF no-repeat right;
+            appearance: none;
+            -webkit-appearance: none;
             -moz-appearance: none;
             text-indent: 0.01px;
             text-overflow: '';
@@ -85,9 +91,11 @@
             height: 35px;
             line-height: 25px;
         }
-        .basic-grey textarea{
-            height:100px;
+
+        .basic-grey textarea {
+            height: 100px;
         }
+
         .basic-grey .button {
             background: #E27575;
             border: none;
@@ -98,27 +106,34 @@
             text-shadow: 1px 1px 1px #9E3F3F;
             cursor: pointer;
         }
+
         .basic-grey .button:hover {
             background: #CF7A7A
         }
-        #message{
-             width: 70%;
 
-
-         }
-        span{
-            font-size: 16px;
-
+        #message {
+            width: 70%;
 
         }
 
-        table,th,td
-        {
-            border:0px solid black;
+        span {
             font-size: 16px;
-            width:auto;
+
         }
 
+        table, td {
+            border: 0px solid black;
+            font-size: 16px;
+            height: 50px;
+            width: auto;
+
+        }
+
+        /*#div2{*/
+            /*high: 50px;*/
+            /*width: 200px;*/
+
+        /*}*/
     </style>
 
     <script src="../../components/javascripts/wangEditor.min.js"></script>
@@ -130,19 +145,27 @@
         <h1>知识审批
             <!--<span>Please fill all the texts in the fields.</span>-->
         </h1>
-        <input id="id"  name="id" style="display:none"/>
+        <input id="id" name="id" style="display:none"/>
 
         <div id="message">
 
             <table>
                 <tr>
                     <td>知识标题：</td>
-                    <td>   <span id="kTitle"></span></td>
+                    <td><span id="kTitle"></span></td>
                 </tr>
                 <tr>
-                    <td>知识解答：</td>
-                    <td><span id="kAnswer"></span></td>
-                </tr>
+                    <td>知识解答：
+
+                    </td>
+
+                    <td>
+
+                        <!--<div id="div2" class="text" >-->
+                        <!--<p id="aa"></p>-->
+                    <!--</div>-->
+                        <p id="aa"></p>
+                    </td>
                 <tr>
                     <td>使用次数：</td>
                     <td><span id="kUseCount"></span></td>
@@ -154,8 +177,8 @@
 
 
         <!--<label>-->
-            <!--<span>最后一次使用时间:</span>-->
-            <!--<span id="kUseTimeLast"></span>-->
+        <!--<span>最后一次使用时间:</span>-->
+        <!--<span id="kUseTimeLast"></span>-->
         <!--</label>-->
 
         <label>
@@ -168,14 +191,24 @@
         <!--<span>创建时间 :</span>-->
         <!--<input id="createTime" type="datetime-local" name="createTime" placeholder="2015/03/27 10:41" />-->
         <!--</label>-->
+
+
+        <div class="main-container" id="main">
+
+            <table id="grid-table"></table>
+
+        </div>
+
+
+
+
         <label>
             <span>审批意见 :</span>
             <!--<textarea id="kAnswer" name="kAnswer" placeholder="填写知识解答"></textarea>-->
-            <input id="kApprMemo"  name="kApprMemo" style="display:none"/>
-            <input id="button"  name="button" style="display:none"/>
+            <input id="kApprMemo" name="kApprMemo" style="display:none"/>
+            <input id="button" name="button" style="display:none"/>
             <div id="div1" class="text">
             </div>
-
 
 
         </label>
@@ -183,39 +216,41 @@
         <label>
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <div class="pull-right" style="margin-right: 50px">
-            <input type="submit" class="button" id="agree" value="通过" />
-            <input type="submit" class="button" id="disagree"  value="不通过" />
-                <input type="button" class="button" id="back"  value="返回" />
+                <input type="submit" class="button" id="agree" value="通过"/>
+                <input type="submit" class="button" id="disagree" value="不通过"/>
+                <input type="button" class="button" id="back" value="返回"/>
             </div>
         </label>
     </form>
 </div>
+
 <script type="text/javascript">
+    var str = location.href; //取得整个地址栏
+    var num = str.indexOf("?");
+    str = str.substr(num + 1);
     var E = window.wangEditor;
-    var editor1 = new E('#div1');// 两个参数也可以传入 elem 对象，class 选择器
+    var editor1 = new E('#div1');
+    var editor2 = new E('#div2');
 
-    editor1.customConfig.menus = [
-
-    ];
+    editor1.customConfig.menus = [];
+    editor2.customConfig.menus = [];
 
     editor1.create();
+    editor2.create();
+    editor2.$textElem.attr('contenteditable', false)
+    $(function () {
 
 
-    $(function(){
 
 
-        var str=location.href; //取得整个地址栏
-        var num=str.indexOf("?");
-        str=str.substr(num+1);
+        var url = "http://localhost:8080/knowledgeRepo/queryKnowledgeById.form?" + str;
 
-        var url="http://localhost:8080/knowledgeRepo/queryKnowledgeById.form?"+str;
+        $.getJSON(url, function (data) {
 
-        $.getJSON(url,function(data){
-
-            document.getElementById("kTitle").innerText=data.kTitle;
-            document.getElementById("kAnswer").innerText=data.kAnswer;
-            document.getElementById("kUseCount").innerText=data.kUseCount;
-           // document.getElementById("kUseTimeLast").innerText=data.kUseTimeLast;
+            document.getElementById("kTitle").innerText = data.kTitle;
+            document.getElementById("aa").innerHTML = data.kAnswer;
+            document.getElementById("kUseCount").innerText = data.kUseCount;
+            // document.getElementById("kUseTimeLast").innerText=data.kUseTimeLast;
 
 
             var msg = '';
@@ -227,42 +262,34 @@
         });
 
 
+    });
 
 
-        　
-        });
-
-
-
-
-
-
-
-    $(function(){
+    $(function () {
 
         var button;
-        $("#agree").click(function(){
-            button=document.getElementById("agree").value
+        $("#agree").click(function () {
+            button = document.getElementById("agree").value
 
 
         });
-        $("#disagree").click(function(){
-            button=document.getElementById("disagree").value
+        $("#disagree").click(function () {
+            button = document.getElementById("disagree").value
 
 
         });
-        $("#knowledge").submit(function(){
-            var str=location.href; //取得整个地址栏
-            var num=str.indexOf("?");
-            str=str.substr(num+4);
-            document.getElementById("id").value=str;
-            document.getElementById("button").value=button;
+        $("#knowledge").submit(function () {
+            var str = location.href; //取得整个地址栏
+            var num = str.indexOf("?");
+            str = str.substr(num + 4);
+            document.getElementById("id").value = str;
+            document.getElementById("button").value = button;
 
 
-            document.getElementById("kApprMemo").value=editor1.txt.text();
+            document.getElementById("kApprMemo").value = editor1.txt.text();
 
             var data = $(this).serialize(); //序列化表单数据
-            $.getJSON("http://localhost:8080/knowledgeRepo/knowledgeApprova.form",data,function(json){
+            $.getJSON("http://localhost:8080/knowledgeRepo/knowledgeApprova.form", data, function (json) {
                 var msg = '';
 
                 msg = "<div id='result'><strong>提交成功！</strong><br/>姓名："
@@ -271,13 +298,13 @@
 //                $("#myform").after(msg); //将返回信息插入页面对应的元素后
             });
             alert("审批成功！")
-            location.href="index.html#!/knowledgeRepo/knowledgeList.html";
+            location.href = "index.html#!/knowledgeRepo/knowledgeList.html";
 
             return false;
         });
     });
     $("#back").click(function () {
-            location.href="index.html#!/knowledgeRepo/knowledgeList.html";
+            location.href = "index.html#!/knowledgeRepo/knowledgeList2.html";
         }
     )
 
