--- a/tpls/index.html
+++ b/tpls/index.html
@@ -12,6 +12,7 @@
 
 		<!--[if IE 7]>
 		<link rel="stylesheet" href="../components/stylesheets/font-awesome-ie7.min.css"/>
+		<link rel="stylesheet" href="../components/plugins/toastr/toastr.min.css"/>
 		<![endif]-->
 
 		<!-- ace styles -->
@@ -21,6 +22,8 @@
 		<!--[if lte IE 8]>
 		<link rel="stylesheet" href="../components/stylesheets/ace/ace-ie.min.css"/>
 		<![endif]-->
+
+		<script src="../components/javascripts/jquery-2.0.3.min.js"></script>
 
 		<script src="../components/javascripts/ace-extra.min.js"></script>
 
@@ -265,7 +268,6 @@
 
 		<!--[if !IE]> -->
 
-		<script src="../components/javascripts/jquery-2.0.3.min.js"></script>
 
 		<!-- <![endif]-->
 
@@ -289,6 +291,7 @@
 		<script src="../components/javascripts/ace-elements.min.js"></script>
 		<script src="../components/javascripts/ace.min.js"></script>
 
+		<script src="../components/plugins/toastr/toastr.min.js"></script>
 		<!--angularjs scripts-->
 
 		<script src="../components/javascripts/angular.min.js"></script>
