--- a/tpls/login.html
+++ b/tpls/login.html
@@ -6,18 +6,18 @@
     <title>登录页</title>
     <meta name="description" content="User login page"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
-    <link rel="stylesheet" href="../components/stylesheets/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../components/stylesheets/font-awesome.min.css"/>
-    <link rel="stylesheet" href="../components/stylesheets/ace/ace-fonts.css"/>
-    <link rel="stylesheet" href="../components/stylesheets/ace/ace.min.css"/>
-    <link rel="stylesheet" href="../components/stylesheets/ace/ace-part2.css"/>
-    <link rel="stylesheet" href="../components/stylesheets/ace/ace-rtl.min.css"/>
-    <link rel="stylesheet" href="../components/stylesheets/ace/ace-ie.min.css"/>
-    <link rel="stylesheet" href="../components/plugins/toastr/toastr.min.css">
-    <script src="../components/stylesheets/ace/html5shiv.js"></script>
-    <script src="../components/stylesheets/ace/respond.js"></script>
-    <script src="../components/javascripts/jquery-2.0.3.min.js"></script>
-    <script src="../components/plugins/toastr/toastr.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/font-awesome.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/ace/ace-fonts.css"/>
+    <link rel="stylesheet" href="/stylesheets/ace/ace.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/ace/ace-part2.css"/>
+    <link rel="stylesheet" href="/stylesheets/ace/ace-rtl.min.css"/>
+    <link rel="stylesheet" href="/stylesheets/ace/ace-ie.min.css"/>
+    <link rel="stylesheet" href="/plugins/toastr/toastr.min.css">
+    <script src="/stylesheets/ace/html5shiv.js"></script>
+    <script src="/stylesheets/ace/respond.js"></script>
+    <script src="/javascripts/jquery-2.0.3.min.js"></script>
+    <script src="/plugins/toastr/toastr.min.js"></script>
 </head>
 
 <body class="login-layout" style="background-color:#F5F6F7">
